printed the last epoch's accuracy

--- a/3layer.ipynb
+++ b/3layer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "55243bc2",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "fe0f41a1",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "9ff9dfc6-ba3b-4389-ac7f-390c7afa3d70",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "e4aa48ac-fd2b-400d-8c54-fc32ba8e35bf",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "7706d038-8eaf-49bc-86d3-2dd033b301ab",
    "metadata": {},
    "outputs": [],
@@ -274,22 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "4958d6e0-06f5-4c6d-bfc5-74a6af6a0fce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'net' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m checkpoint \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./checkpoint/ckpt.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mnet\u001b[49m\u001b[38;5;241m.\u001b[39mload_state_dict(checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnet\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m best_acc \u001b[38;5;241m=\u001b[39m checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124macc\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      4\u001b[0m start_epoch \u001b[38;5;241m=\u001b[39m checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mepoch\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'net' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "checkpoint = torch.load('./checkpoint/ckpt.pth')\n",
     "net.load_state_dict(checkpoint['net'])\n",
@@ -307,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "87e10974-6d25-49ae-9430-23e424a2da63",
    "metadata": {},
    "outputs": [],
@@ -329,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "754ad4da-624f-448a-b44c-dd03758179b5",
    "metadata": {},
    "outputs": [
@@ -352,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "3c076fc0-5741-4113-bfc8-7b808418b5a3",
    "metadata": {},
    "outputs": [],
@@ -496,9 +484,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f4e5bd0-016b-4790-ba8d-c1fbf03a9733",
+   "metadata": {},
+   "source": [
+    "I missed the last epoch, I will print the accuracy of the final epoch here from the save..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "35721175-f913-4493-bb2a-de428a803202",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.425 | Acc: 85.880% (8588/10000)\n",
+      "Time Elapsed: 0m 15s\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Training\n",
+    "def train(epoch):\n",
+    "    print('\\nEpoch: %d' % epoch)\n",
+    "    net.train()\n",
+    "    train_loss = 0\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    for batch_idx, (inputs, targets) in enumerate(trainloader):\n",
+    "        inputs, targets = inputs.to(device), targets.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = net(inputs)\n",
+    "        loss = criterion(outputs, targets)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        train_loss += loss.item()\n",
+    "        _, predicted = outputs.max(1)\n",
+    "        total += targets.size(0)\n",
+    "        correct += predicted.eq(targets).sum().item()\n",
+    "\n",
+    "\n",
+    "def test(epoch):\n",
+    "    global best_acc\n",
+    "    net.eval()\n",
+    "    test_loss = 0\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    with torch.no_grad():\n",
+    "        for batch_idx, (inputs, targets) in enumerate(testloader):\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
+    "            outputs = net(inputs)\n",
+    "            loss = criterion(outputs, targets)\n",
+    "\n",
+    "            test_loss += loss.item()\n",
+    "            _, predicted = outputs.max(1)\n",
+    "            total += targets.size(0)\n",
+    "            correct += predicted.eq(targets).sum().item()\n",
+    "\n",
+    "    # Save checkpoint.\n",
+    "    acc = 100.*correct/total\n",
+    "    if acc > best_acc:\n",
+    "        print('Saving..')\n",
+    "        state = {\n",
+    "            'net': net.state_dict(),\n",
+    "            'acc': acc,\n",
+    "            'epoch': epoch,\n",
+    "        }\n",
+    "        if not os.path.isdir('checkpoint'):\n",
+    "            os.mkdir('checkpoint')\n",
+    "        torch.save(state, './checkpoint/ckpt.pth')\n",
+    "        best_acc = acc\n",
+    "    print('Loss: %.3f | Acc: %.3f%% (%d/%d)'\n",
+    "                            % (test_loss/(batch_idx+1), 100.*correct/total, correct, total))\n",
+    "    \n",
+    "    \n",
+    "epoch=start_epoch\n",
+    "start_time=time.time()\n",
+    "test(epoch)\n",
+    "end_time=time.time()\n",
+    "epoch_mins,epoch_secs=epoch_time(start_time,end_time)\n",
+    "print(f\"Time Elapsed: {epoch_mins}m {epoch_secs}s\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09764e3d-fc96-4d34-84f5-ac45f4003ab2",
+   "id": "eb3d1983-5948-467d-9bd5-cfc9441e5022",
    "metadata": {},
    "outputs": [],
    "source": []
