reached 88.2% accuracy after running 20 epochs

--- a/mini_project_main.ipynb
+++ b/mini_project_main.ipynb
@@ -10,26 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c7c49551",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "print(torch.cuda.is_available())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "55243bc2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "fe0f41a1",
    "metadata": {},
    "outputs": [
@@ -100,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "9ff9dfc6-ba3b-4389-ac7f-390c7afa3d70",
    "metadata": {},
    "outputs": [],
@@ -255,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "87e10974-6d25-49ae-9430-23e424a2da63",
    "metadata": {},
    "outputs": [],
@@ -277,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "754ad4da-624f-448a-b44c-dd03758179b5",
    "metadata": {},
    "outputs": [
@@ -300,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "3c076fc0-5741-4113-bfc8-7b808418b5a3",
    "metadata": {},
    "outputs": [],
@@ -314,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "51fb8bcf-346d-4c41-8f86-03666f1753a8",
    "metadata": {},
    "outputs": [
@@ -324,52 +305,93 @@
      "text": [
       "\n",
       "Epoch: 0\n",
-      "Loss: 1.155 | Acc: 59.290% (5929/10000)\n",
-      "Time Elapsed: 0m 50s\n",
+      "Saving..\n",
+      "Loss: 1.069 | Acc: 62.020% (6202/10000)\n",
+      "Time Elapsed: 0m 55s\n",
       "\n",
       "Epoch: 1\n",
-      "Loss: 0.910 | Acc: 68.160% (6816/10000)\n",
-      "Time Elapsed: 0m 49s\n",
+      "Saving..\n",
+      "Loss: 0.839 | Acc: 70.930% (7093/10000)\n",
+      "Time Elapsed: 0m 45s\n",
       "\n",
       "Epoch: 2\n",
       "Saving..\n",
-      "Loss: 0.745 | Acc: 74.820% (7482/10000)\n",
-      "Time Elapsed: 0m 54s\n",
+      "Loss: 0.704 | Acc: 75.870% (7587/10000)\n",
+      "Time Elapsed: 0m 45s\n",
       "\n",
       "Epoch: 3\n",
       "Saving..\n",
-      "Loss: 0.632 | Acc: 78.350% (7835/10000)\n",
-      "Time Elapsed: 0m 51s\n",
+      "Loss: 0.648 | Acc: 78.130% (7813/10000)\n",
+      "Time Elapsed: 0m 47s\n",
       "\n",
       "Epoch: 4\n",
       "Saving..\n",
-      "Loss: 0.624 | Acc: 79.120% (7912/10000)\n",
-      "Time Elapsed: 0m 58s\n",
+      "Loss: 0.592 | Acc: 79.650% (7965/10000)\n",
+      "Time Elapsed: 0m 49s\n",
       "\n",
       "Epoch: 5\n",
       "Saving..\n",
-      "Loss: 0.532 | Acc: 81.820% (8182/10000)\n",
-      "Time Elapsed: 0m 58s\n",
+      "Loss: 0.567 | Acc: 80.990% (8099/10000)\n",
+      "Time Elapsed: 0m 49s\n",
       "\n",
       "Epoch: 6\n",
       "Saving..\n",
-      "Loss: 0.518 | Acc: 82.830% (8283/10000)\n",
-      "Time Elapsed: 0m 52s\n",
+      "Loss: 0.504 | Acc: 83.140% (8314/10000)\n",
+      "Time Elapsed: 0m 49s\n",
       "\n",
       "Epoch: 7\n",
       "Saving..\n",
-      "Loss: 0.530 | Acc: 83.070% (8307/10000)\n",
-      "Time Elapsed: 0m 58s\n",
+      "Loss: 0.493 | Acc: 83.650% (8365/10000)\n",
+      "Time Elapsed: 0m 50s\n",
       "\n",
       "Epoch: 8\n",
       "Saving..\n",
-      "Loss: 0.455 | Acc: 85.030% (8503/10000)\n",
-      "Time Elapsed: 1m 6s\n",
+      "Loss: 0.488 | Acc: 84.020% (8402/10000)\n",
+      "Time Elapsed: 0m 49s\n",
       "\n",
       "Epoch: 9\n",
-      "Loss: 0.470 | Acc: 84.560% (8456/10000)\n",
-      "Time Elapsed: 0m 56s\n",
-      "Total time elapsed: 9m 17s\n"
+      "Saving..\n",
+      "Loss: 0.475 | Acc: 84.290% (8429/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "\n",
+      "Epoch: 10\n",
+      "Loss: 0.505 | Acc: 83.900% (8390/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "\n",
+      "Epoch: 11\n",
+      "Saving..\n",
+      "Loss: 0.428 | Acc: 85.830% (8583/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "\n",
+      "Epoch: 12\n",
+      "Loss: 0.505 | Acc: 84.670% (8467/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "\n",
+      "Epoch: 13\n",
+      "Saving..\n",
+      "Loss: 0.427 | Acc: 87.030% (8703/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "\n",
+      "Epoch: 14\n",
+      "Saving..\n",
+      "Loss: 0.379 | Acc: 87.970% (8797/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "\n",
+      "Epoch: 15\n",
+      "Saving..\n",
+      "Loss: 0.404 | Acc: 88.010% (8801/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "\n",
+      "Epoch: 16\n",
+      "Loss: 0.392 | Acc: 87.990% (8799/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "\n",
+      "Epoch: 17\n",
+      "Saving..\n",
+      "Loss: 0.373 | Acc: 88.720% (8872/10000)\n",
+      "Time Elapsed: 0m 51s\n",
+      "\n",
+      "Epoch: 18\n"
      ]
     }
    ],
@@ -431,7 +453,7 @@
     "    \n",
     "full_start_time=time.time()\n",
     "\n",
-    "for epoch in range(start_epoch, start_epoch+10):\n",
+    "for epoch in range(start_epoch, start_epoch+20):\n",
     "    start_time=time.time()\n",
     "    train(epoch)\n",
     "    test(epoch)\n",
@@ -443,28 +465,6 @@
     "full_end_time=time.time()\n",
     "full_mins,full_secs=epoch_time(full_start_time,full_end_time)\n",
     "print(f\"Total time elapsed: {full_mins}m {full_secs}s\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "2d4b5fdc-8934-43e0-b5fd-7465ecce0543",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: not a git repository (or any of the parent directories): .git\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git add mini_project_main.ipynb\n",
-    "!git commit -m \" \"\n",
-    "!git push"
    ]
   },
   {
