reached 88.2% accuracy after running 20 epochs

--- a/mini_project_main.ipynb
+++ b/mini_project_main.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "51fb8bcf-346d-4c41-8f86-03666f1753a8",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,14 @@
       "Loss: 0.373 | Acc: 88.720% (8872/10000)\n",
       "Time Elapsed: 0m 51s\n",
       "\n",
-      "Epoch: 18\n"
+      "Epoch: 18\n",
+      "Loss: 0.442 | Acc: 87.470% (8747/10000)\n",
+      "Time Elapsed: 0m 51s\n",
+      "\n",
+      "Epoch: 19\n",
+      "Loss: 0.404 | Acc: 88.440% (8844/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "Total time elapsed: 16m 39s\n"
      ]
     }
    ],
