reached 89.5% accuracy after running 30 epochs

--- a/mini_project_main.ipynb
+++ b/mini_project_main.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "4958d6e0-06f5-4c6d-bfc5-74a6af6a0fce",
    "metadata": {},
    "outputs": [],
@@ -476,8 +476,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "09764e3d-fc96-4d34-84f5-ac45f4003ab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch: 17\n",
+      "Loss: 0.434 | Acc: 87.130% (8713/10000)\n",
+      "Time Elapsed: 0m 48s\n",
+      "\n",
+      "Epoch: 18\n",
+      "Saving..\n",
+      "Loss: 0.362 | Acc: 89.040% (8904/10000)\n",
+      "Time Elapsed: 0m 47s\n",
+      "\n",
+      "Epoch: 19\n",
+      "Loss: 0.396 | Acc: 88.720% (8872/10000)\n",
+      "Time Elapsed: 0m 47s\n",
+      "\n",
+      "Epoch: 20\n",
+      "Loss: 0.402 | Acc: 88.720% (8872/10000)\n",
+      "Time Elapsed: 0m 46s\n",
+      "\n",
+      "Epoch: 21\n",
+      "Saving..\n",
+      "Loss: 0.382 | Acc: 89.230% (8923/10000)\n",
+      "Time Elapsed: 0m 46s\n",
+      "\n",
+      "Epoch: 22\n",
+      "Loss: 0.405 | Acc: 88.820% (8882/10000)\n",
+      "Time Elapsed: 0m 46s\n",
+      "\n",
+      "Epoch: 23\n",
+      "Saving..\n",
+      "Loss: 0.383 | Acc: 89.950% (8995/10000)\n",
+      "Time Elapsed: 0m 46s\n",
+      "\n",
+      "Epoch: 24\n",
+      "Loss: 0.382 | Acc: 89.370% (8937/10000)\n",
+      "Time Elapsed: 0m 46s\n",
+      "\n",
+      "Epoch: 25\n",
+      "Loss: 0.389 | Acc: 89.420% (8942/10000)\n",
+      "Time Elapsed: 0m 49s\n",
+      "\n",
+      "Epoch: 26\n",
+      "Loss: 0.405 | Acc: 89.640% (8964/10000)\n",
+      "Time Elapsed: 0m 50s\n",
+      "Total time elapsed: 7m 56s\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_start_time=time.time()\n",
+    "\n",
+    "for epoch in range(start_epoch, start_epoch+10):\n",
+    "    start_time=time.time()\n",
+    "    train(epoch)\n",
+    "    test(epoch)\n",
+    "    end_time=time.time()\n",
+    "    epoch_mins,epoch_secs=epoch_time(start_time,end_time)\n",
+    "    print(f\"Time Elapsed: {epoch_mins}m {epoch_secs}s\")\n",
+    "    scheduler.step()\n",
+    "    \n",
+    "full_end_time=time.time()\n",
+    "full_mins,full_secs=epoch_time(full_start_time,full_end_time)\n",
+    "print(f\"Total time elapsed: {full_mins}m {full_secs}s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2701b7d0-8211-4034-8b05-6ce6f124997b",
    "metadata": {},
    "outputs": [],
    "source": []
