30 epochs for 2111 and autoaugment

--- a/auto_augment_policy.ipynb
+++ b/auto_augment_policy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "55243bc2",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "fe0f41a1",
    "metadata": {},
    "outputs": [
@@ -40,6 +40,7 @@
      "output_type": "stream",
      "text": [
       "==> Preparing data..\n",
+      "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n"
      ]
@@ -53,8 +54,9 @@
     "# Data\n",
     "print('==> Preparing data..')\n",
     "transform_train = transforms.Compose([\n",
-    "    transforms.RandomCrop(32, padding=4),\n",
-    "    transforms.RandomHorizontalFlip(),\n",
+    "    #transforms.RandomCrop(32, padding=4),\n",
+    "    #transforms.RandomHorizontalFlip(),\n",
+    "    transforms.AutoAugment(policy=transforms.AutoAugmentPolicy.CIFAR10),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
@@ -64,8 +66,13 @@
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
     "\n",
-    "trainset = torchvision.datasets.CIFAR10(\n",
+    "trainset_transformed = torchvision.datasets.CIFAR10(\n",
     "    root='./data', train=True, download=True, transform=transform_train)\n",
+    "trainset_untransformed = torchvision.datasets.CIFAR10(\n",
+    "    root='./data', train=True, download=True, transform=transform_test)\n",
+    "\n",
+    "trainset = torch.utils.data.ConcatDataset([trainset_transformed,trainset_untransformed])\n",
+    "\n",
     "trainloader = torch.utils.data.DataLoader(\n",
     "    trainset, batch_size=128, shuffle=True, num_workers=2)\n",
     "\n",
@@ -81,7 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
+   "id": "21725200-d078-44a5-81d0-5902cceb0567",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "9ff9dfc6-ba3b-4389-ac7f-390c7afa3d70",
    "metadata": {},
    "outputs": [],
@@ -215,22 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "4958d6e0-06f5-4c6d-bfc5-74a6af6a0fce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'net' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m checkpoint \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./checkpoint/ckpt.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mnet\u001b[49m\u001b[38;5;241m.\u001b[39mload_state_dict(checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnet\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m best_acc \u001b[38;5;241m=\u001b[39m checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124macc\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      4\u001b[0m start_epoch \u001b[38;5;241m=\u001b[39m checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mepoch\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'net' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "checkpoint = torch.load('./checkpoint/ckpt.pth')\n",
     "net.load_state_dict(checkpoint['net'])\n",
@@ -248,13 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "id": "87e10974-6d25-49ae-9430-23e424a2da63",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model\n",
-    "net = ResNet18_2111()\n",
+    "net = ResNet18over2()\n",
     "net = net.to(device)\n",
     "if device == 'cuda':\n",
     "    net = torch.nn.DataParallel(net)\n",
@@ -270,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "id": "754ad4da-624f-448a-b44c-dd03758179b5",
    "metadata": {},
    "outputs": [
@@ -278,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4,977,226\n"
+      "4,903,242\n"
      ]
     }
    ],
@@ -293,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "3c076fc0-5741-4113-bfc8-7b808418b5a3",
    "metadata": {},
    "outputs": [],
@@ -307,153 +323,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "51fb8bcf-346d-4c41-8f86-03666f1753a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Epoch: 0\n",
-      "Saving..\n",
-      "Loss: 1.547 | Acc: 51.740% (5174/10000)\n",
-      "Time Elapsed: 1m 4s\n",
-      "\n",
-      "Epoch: 1\n",
-      "Saving..\n",
-      "Loss: 1.033 | Acc: 64.940% (6494/10000)\n",
-      "Time Elapsed: 0m 58s\n",
-      "\n",
-      "Epoch: 2\n",
-      "Saving..\n",
-      "Loss: 0.887 | Acc: 69.460% (6946/10000)\n",
-      "Time Elapsed: 1m 0s\n",
-      "\n",
-      "Epoch: 3\n",
-      "Saving..\n",
-      "Loss: 0.670 | Acc: 78.080% (7808/10000)\n",
-      "Time Elapsed: 1m 1s\n",
-      "\n",
-      "Epoch: 4\n",
-      "Loss: 0.707 | Acc: 77.690% (7769/10000)\n",
-      "Time Elapsed: 0m 58s\n",
-      "\n",
-      "Epoch: 5\n",
-      "Saving..\n",
-      "Loss: 0.583 | Acc: 80.220% (8022/10000)\n",
-      "Time Elapsed: 0m 58s\n",
-      "\n",
-      "Epoch: 6\n",
-      "Saving..\n",
-      "Loss: 0.521 | Acc: 82.740% (8274/10000)\n",
-      "Time Elapsed: 1m 2s\n",
-      "\n",
-      "Epoch: 7\n",
-      "Saving..\n",
-      "Loss: 0.515 | Acc: 83.000% (8300/10000)\n",
-      "Time Elapsed: 0m 58s\n",
-      "\n",
-      "Epoch: 8\n",
-      "Saving..\n",
-      "Loss: 0.479 | Acc: 84.400% (8440/10000)\n",
-      "Time Elapsed: 0m 58s\n",
-      "\n",
-      "Epoch: 9\n",
-      "Saving..\n",
-      "Loss: 0.437 | Acc: 85.940% (8594/10000)\n",
-      "Time Elapsed: 1m 0s\n",
-      "\n",
-      "Epoch: 10\n",
-      "Loss: 0.490 | Acc: 84.430% (8443/10000)\n",
-      "Time Elapsed: 1m 5s\n",
-      "\n",
-      "Epoch: 11\n",
-      "Saving..\n",
-      "Loss: 0.387 | Acc: 87.540% (8754/10000)\n",
-      "Time Elapsed: 1m 6s\n",
-      "\n",
-      "Epoch: 12\n",
-      "Loss: 0.438 | Acc: 86.200% (8620/10000)\n",
-      "Time Elapsed: 1m 5s\n",
-      "\n",
-      "Epoch: 13\n",
-      "Loss: 0.423 | Acc: 87.080% (8708/10000)\n",
-      "Time Elapsed: 1m 5s\n",
-      "\n",
-      "Epoch: 14\n",
-      "Saving..\n",
-      "Loss: 0.358 | Acc: 89.050% (8905/10000)\n",
-      "Time Elapsed: 1m 6s\n",
-      "\n",
-      "Epoch: 15\n",
-      "Saving..\n",
-      "Loss: 0.340 | Acc: 89.410% (8941/10000)\n",
-      "Time Elapsed: 1m 8s\n",
-      "\n",
-      "Epoch: 16\n",
-      "Loss: 0.394 | Acc: 88.070% (8807/10000)\n",
-      "Time Elapsed: 1m 1s\n",
-      "\n",
-      "Epoch: 17\n",
-      "Loss: 0.367 | Acc: 89.160% (8916/10000)\n",
-      "Time Elapsed: 1m 6s\n",
-      "\n",
-      "Epoch: 18\n",
-      "Loss: 0.458 | Acc: 87.230% (8723/10000)\n",
-      "Time Elapsed: 1m 9s\n",
-      "\n",
-      "Epoch: 19\n",
-      "Saving..\n",
-      "Loss: 0.346 | Acc: 89.980% (8998/10000)\n",
-      "Time Elapsed: 1m 8s\n",
-      "\n",
-      "Epoch: 20\n",
-      "Loss: 0.367 | Acc: 89.430% (8943/10000)\n",
-      "Time Elapsed: 1m 11s\n",
-      "\n",
-      "Epoch: 21\n",
-      "Loss: 0.356 | Acc: 89.570% (8957/10000)\n",
-      "Time Elapsed: 1m 10s\n",
-      "\n",
-      "Epoch: 22\n",
-      "Loss: 0.389 | Acc: 89.360% (8936/10000)\n",
-      "Time Elapsed: 1m 15s\n",
-      "\n",
-      "Epoch: 23\n",
-      "Loss: 0.355 | Acc: 89.860% (8986/10000)\n",
-      "Time Elapsed: 1m 12s\n",
-      "\n",
-      "Epoch: 24\n",
-      "Loss: 0.383 | Acc: 89.330% (8933/10000)\n",
-      "Time Elapsed: 1m 11s\n",
-      "\n",
-      "Epoch: 25\n",
-      "Loss: 0.385 | Acc: 89.690% (8969/10000)\n",
-      "Time Elapsed: 1m 14s\n",
-      "\n",
-      "Epoch: 26\n",
-      "Loss: 0.418 | Acc: 89.450% (8945/10000)\n",
-      "Time Elapsed: 1m 11s\n",
-      "\n",
-      "Epoch: 27\n",
-      "Saving..\n",
-      "Loss: 0.403 | Acc: 90.180% (9018/10000)\n",
-      "Time Elapsed: 1m 15s\n",
-      "\n",
-      "Epoch: 28\n",
-      "Saving..\n",
-      "Loss: 0.350 | Acc: 90.700% (9070/10000)\n",
-      "Time Elapsed: 1m 13s\n",
-      "\n",
-      "Epoch: 29\n",
-      "Loss: 0.380 | Acc: 90.330% (9033/10000)\n",
-      "Time Elapsed: 1m 11s\n",
-      "Total time elapsed: 33m 13s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Training\n",
@@ -508,8 +381,155 @@
     "        torch.save(state, './checkpoint/ckpt.pth')\n",
     "        best_acc = acc\n",
     "    print('Loss: %.3f | Acc: %.3f%% (%d/%d)'\n",
-    "                            % (test_loss/(batch_idx+1), 100.*correct/total, correct, total))\n",
-    "    \n",
+    "                            % (test_loss/(batch_idx+1), 100.*correct/total, correct, total))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "09764e3d-fc96-4d34-84f5-ac45f4003ab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch: 0\n",
+      "Saving..\n",
+      "Loss: 0.819 | Acc: 71.220% (7122/10000)\n",
+      "Time Elapsed: 1m 28s\n",
+      "\n",
+      "Epoch: 1\n",
+      "Saving..\n",
+      "Loss: 0.559 | Acc: 80.340% (8034/10000)\n",
+      "Time Elapsed: 1m 28s\n",
+      "\n",
+      "Epoch: 2\n",
+      "Saving..\n",
+      "Loss: 0.584 | Acc: 81.190% (8119/10000)\n",
+      "Time Elapsed: 1m 28s\n",
+      "\n",
+      "Epoch: 3\n",
+      "Saving..\n",
+      "Loss: 0.609 | Acc: 82.030% (8203/10000)\n",
+      "Time Elapsed: 1m 33s\n",
+      "\n",
+      "Epoch: 4\n",
+      "Saving..\n",
+      "Loss: 0.585 | Acc: 83.310% (8331/10000)\n",
+      "Time Elapsed: 1m 34s\n",
+      "\n",
+      "Epoch: 5\n",
+      "Loss: 0.626 | Acc: 83.230% (8323/10000)\n",
+      "Time Elapsed: 1m 34s\n",
+      "\n",
+      "Epoch: 6\n",
+      "Saving..\n",
+      "Loss: 0.610 | Acc: 84.220% (8422/10000)\n",
+      "Time Elapsed: 1m 34s\n",
+      "\n",
+      "Epoch: 7\n",
+      "Loss: 0.651 | Acc: 83.510% (8351/10000)\n",
+      "Time Elapsed: 1m 35s\n",
+      "\n",
+      "Epoch: 8\n",
+      "Loss: 0.644 | Acc: 83.350% (8335/10000)\n",
+      "Time Elapsed: 1m 36s\n",
+      "\n",
+      "Epoch: 9\n",
+      "Saving..\n",
+      "Loss: 0.645 | Acc: 84.750% (8475/10000)\n",
+      "Time Elapsed: 1m 38s\n",
+      "\n",
+      "Epoch: 10\n",
+      "Loss: 0.623 | Acc: 84.550% (8455/10000)\n",
+      "Time Elapsed: 1m 38s\n",
+      "\n",
+      "Epoch: 11\n",
+      "Loss: 0.678 | Acc: 84.650% (8465/10000)\n",
+      "Time Elapsed: 1m 41s\n",
+      "\n",
+      "Epoch: 12\n",
+      "Saving..\n",
+      "Loss: 0.594 | Acc: 85.970% (8597/10000)\n",
+      "Time Elapsed: 1m 28s\n",
+      "\n",
+      "Epoch: 13\n",
+      "Loss: 0.658 | Acc: 84.490% (8449/10000)\n",
+      "Time Elapsed: 1m 40s\n",
+      "\n",
+      "Epoch: 14\n",
+      "Loss: 0.640 | Acc: 85.210% (8521/10000)\n",
+      "Time Elapsed: 1m 43s\n",
+      "\n",
+      "Epoch: 15\n",
+      "Loss: 0.685 | Acc: 84.580% (8458/10000)\n",
+      "Time Elapsed: 1m 25s\n",
+      "\n",
+      "Epoch: 16\n",
+      "Loss: 0.631 | Acc: 85.700% (8570/10000)\n",
+      "Time Elapsed: 1m 40s\n",
+      "\n",
+      "Epoch: 17\n",
+      "Loss: 0.632 | Acc: 85.630% (8563/10000)\n",
+      "Time Elapsed: 1m 25s\n",
+      "\n",
+      "Epoch: 18\n",
+      "Saving..\n",
+      "Loss: 0.592 | Acc: 86.480% (8648/10000)\n",
+      "Time Elapsed: 1m 44s\n",
+      "\n",
+      "Epoch: 19\n",
+      "Loss: 0.626 | Acc: 85.780% (8578/10000)\n",
+      "Time Elapsed: 1m 45s\n",
+      "\n",
+      "Epoch: 20\n",
+      "Loss: 0.616 | Acc: 86.440% (8644/10000)\n",
+      "Time Elapsed: 1m 46s\n",
+      "\n",
+      "Epoch: 21\n",
+      "Saving..\n",
+      "Loss: 0.586 | Acc: 86.630% (8663/10000)\n",
+      "Time Elapsed: 1m 57s\n",
+      "\n",
+      "Epoch: 22\n",
+      "Loss: 0.644 | Acc: 85.950% (8595/10000)\n",
+      "Time Elapsed: 1m 30s\n",
+      "\n",
+      "Epoch: 23\n",
+      "Saving..\n",
+      "Loss: 0.553 | Acc: 86.910% (8691/10000)\n",
+      "Time Elapsed: 2m 4s\n",
+      "\n",
+      "Epoch: 24\n",
+      "Loss: 0.623 | Acc: 86.530% (8653/10000)\n",
+      "Time Elapsed: 2m 8s\n",
+      "\n",
+      "Epoch: 25\n",
+      "Loss: 0.636 | Acc: 86.200% (8620/10000)\n",
+      "Time Elapsed: 2m 1s\n",
+      "\n",
+      "Epoch: 26\n",
+      "Loss: 0.600 | Acc: 86.890% (8689/10000)\n",
+      "Time Elapsed: 2m 2s\n",
+      "\n",
+      "Epoch: 27\n",
+      "Loss: 0.605 | Acc: 86.230% (8623/10000)\n",
+      "Time Elapsed: 2m 13s\n",
+      "\n",
+      "Epoch: 28\n",
+      "Loss: 0.588 | Acc: 86.880% (8688/10000)\n",
+      "Time Elapsed: 1m 49s\n",
+      "\n",
+      "Epoch: 29\n",
+      "Loss: 0.595 | Acc: 86.270% (8627/10000)\n",
+      "Time Elapsed: 1m 45s\n",
+      "Total time elapsed: 51m 8s\n"
+     ]
+    }
+   ],
+   "source": [
     "full_start_time=time.time()\n",
     "\n",
     "for epoch in range(start_epoch, start_epoch+30):\n",
@@ -523,13 +543,13 @@
     "    \n",
     "full_end_time=time.time()\n",
     "full_mins,full_secs=epoch_time(full_start_time,full_end_time)\n",
-    "print(f\"Total time elapsed: {full_mins}m {full_secs}s\")\n"
+    "print(f\"Total time elapsed: {full_mins}m {full_secs}s\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09764e3d-fc96-4d34-84f5-ac45f4003ab2",
+   "id": "9783e130-34a9-43a2-bdea-21fe5a050ce1",
    "metadata": {},
    "outputs": [],
    "source": []
