--- a/2111.ipynb
+++ b/2111.ipynb
@@ -215,22 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4958d6e0-06f5-4c6d-bfc5-74a6af6a0fce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'net' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m checkpoint \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./checkpoint/ckpt.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mnet\u001b[49m\u001b[38;5;241m.\u001b[39mload_state_dict(checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnet\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m best_acc \u001b[38;5;241m=\u001b[39m checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124macc\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      4\u001b[0m start_epoch \u001b[38;5;241m=\u001b[39m checkpoint[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mepoch\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'net' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "checkpoint = torch.load('./checkpoint/ckpt.pth')\n",
     "net.load_state_dict(checkpoint['net'])\n",
@@ -530,6 +518,130 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "09764e3d-fc96-4d34-84f5-ac45f4003ab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch: 28\n",
+      "Loss: 0.373 | Acc: 90.610% (9061/10000)\n",
+      "Time Elapsed: 1m 0s\n",
+      "\n",
+      "Epoch: 29\n",
+      "Saving..\n",
+      "Loss: 0.366 | Acc: 91.080% (9108/10000)\n",
+      "Time Elapsed: 0m 56s\n",
+      "\n",
+      "Epoch: 30\n",
+      "Loss: 0.352 | Acc: 91.020% (9102/10000)\n",
+      "Time Elapsed: 0m 59s\n",
+      "\n",
+      "Epoch: 31\n",
+      "Loss: 0.409 | Acc: 90.230% (9023/10000)\n",
+      "Time Elapsed: 0m 57s\n",
+      "\n",
+      "Epoch: 32\n",
+      "Loss: 0.407 | Acc: 90.350% (9035/10000)\n",
+      "Time Elapsed: 1m 1s\n",
+      "\n",
+      "Epoch: 33\n",
+      "Loss: 0.406 | Acc: 90.360% (9036/10000)\n",
+      "Time Elapsed: 1m 1s\n",
+      "\n",
+      "Epoch: 34\n",
+      "Loss: 0.410 | Acc: 90.720% (9072/10000)\n",
+      "Time Elapsed: 1m 2s\n",
+      "\n",
+      "Epoch: 35\n",
+      "Loss: 0.405 | Acc: 90.590% (9059/10000)\n",
+      "Time Elapsed: 1m 2s\n",
+      "\n",
+      "Epoch: 36\n",
+      "Loss: 0.424 | Acc: 90.480% (9048/10000)\n",
+      "Time Elapsed: 1m 3s\n",
+      "\n",
+      "Epoch: 37\n",
+      "Loss: 0.390 | Acc: 90.930% (9093/10000)\n",
+      "Time Elapsed: 0m 58s\n",
+      "\n",
+      "Epoch: 38\n",
+      "Saving..\n",
+      "Loss: 0.405 | Acc: 91.170% (9117/10000)\n",
+      "Time Elapsed: 1m 3s\n",
+      "\n",
+      "Epoch: 39\n",
+      "Loss: 0.443 | Acc: 90.290% (9029/10000)\n",
+      "Time Elapsed: 0m 59s\n",
+      "\n",
+      "Epoch: 40\n",
+      "Loss: 0.437 | Acc: 90.900% (9090/10000)\n",
+      "Time Elapsed: 1m 3s\n",
+      "\n",
+      "Epoch: 41\n",
+      "Saving..\n",
+      "Loss: 0.386 | Acc: 91.530% (9153/10000)\n",
+      "Time Elapsed: 1m 4s\n",
+      "\n",
+      "Epoch: 42\n",
+      "Loss: 0.403 | Acc: 91.190% (9119/10000)\n",
+      "Time Elapsed: 1m 4s\n",
+      "\n",
+      "Epoch: 43\n",
+      "Loss: 0.437 | Acc: 90.950% (9095/10000)\n",
+      "Time Elapsed: 1m 4s\n",
+      "\n",
+      "Epoch: 44\n",
+      "Loss: 0.447 | Acc: 90.780% (9078/10000)\n",
+      "Time Elapsed: 1m 4s\n",
+      "\n",
+      "Epoch: 45\n",
+      "Saving..\n",
+      "Loss: 0.414 | Acc: 91.620% (9162/10000)\n",
+      "Time Elapsed: 1m 0s\n",
+      "\n",
+      "Epoch: 46\n",
+      "Loss: 0.422 | Acc: 91.430% (9143/10000)\n",
+      "Time Elapsed: 1m 5s\n",
+      "\n",
+      "Epoch: 47\n",
+      "Loss: 0.462 | Acc: 90.960% (9096/10000)\n",
+      "Time Elapsed: 1m 7s\n",
+      "\n",
+      "Epoch: 48\n",
+      "Loss: 0.460 | Acc: 91.300% (9130/10000)\n",
+      "Time Elapsed: 1m 7s\n",
+      "\n",
+      "Epoch: 49\n",
+      "Loss: 0.450 | Acc: 91.380% (9138/10000)\n",
+      "Time Elapsed: 1m 7s\n",
+      "\n",
+      "Epoch: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_start_time=time.time()\n",
+    "\n",
+    "for epoch in range(start_epoch, start_epoch+30):\n",
+    "    start_time=time.time()\n",
+    "    train(epoch)\n",
+    "    test(epoch)\n",
+    "    end_time=time.time()\n",
+    "    epoch_mins,epoch_secs=epoch_time(start_time,end_time)\n",
+    "    print(f\"Time Elapsed: {epoch_mins}m {epoch_secs}s\")\n",
+    "    scheduler.step()\n",
+    "    \n",
+    "full_end_time=time.time()\n",
+    "full_mins,full_secs=epoch_time(full_start_time,full_end_time)\n",
+    "print(f\"Total time elapsed: {full_mins}m {full_secs}s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16b7c5eb-5b36-4abf-968e-28c58f11730b",
    "metadata": {},
    "outputs": [],
    "source": []
